<resources>
    <string name="app_name">Lab 6</string>
    <string name="fragment_id">#</string>
    <string name="totalBill">Total Bill:</string>
    <string name="tipPercentage">Tip Percentage:</string>
    <string name="numberOfPeople">Number of People:</string>
    <string name="calculate">Calculate</string>
    <string name="fahrenheit">Fahrenheit:</string>
    <string name="celsius">Celsius:</string>
    <string name="convert">Convert</string>
    <string name="miles">Miles:</string>
    <string name="kilometers">Kilometers:</string>
    <string-array
        name="tabNames">
        <item>tip</item>
        <item>temperature</item>
        <item>distance</item>
    </string-array>


</resources>